src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_BadTemplateTargetType.xaml
<!--
/*******************************************************************
 * Purpose: Verifies a ControlTemplate as a child of ControlTemplate
 *          causes the correct error.
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_BadTemplateTargetType.xaml $
********************************************************************/
-->
<Page
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
    
    <Canvas>
        <Button>
            <Button.Template>
                <ControlTemplate TargetType="{x:Type ListBox}">
                    <Canvas Background="blue"></Canvas>
                </ControlTemplate>
            </Button.Template>
        </Button>
    </Canvas>
    
</Page>
